--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,11 @@
-<mat-toolbar class="max-w-7xl mx-auto border-x justify-between">
-    <a routerLink="home">Padel Park</a>
+<div class="w-full mx-auto border-x bg-green-600 flex justify-between">
+    <a routerLink="home" class="my-auto ml-4 text-white">Padel Park</a>
     <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon
             [matBadge]="itemsQuantity"
             [matBadgeHidden]="!itemsQuantity"
             matBadgeColor="warn"
+            class="text-white"
         >shopping_cart</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
@@ -39,4 +40,4 @@
             </div>
         </div> 
     </mat-menu>
-</mat-toolbar>
+</div>
