--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,7 +16,7 @@ class="min-h-full w-full mx-auto border-x"
             [cols]="cols" 
             [rowHeight]="rowHeight"
             >
-            <mat-grid-tile *ngFor="let product of products">
+            <mat-grid-tile *ngFor="let product of Products">
                 <app-product-box 
                    [product]="product"
                   (addToCart)="onAddToCart($event)"
