--- a/client/padelpark/src/app/components/nav-bar/nav-bar.component.html
+++ b/client/padelpark/src/app/components/nav-bar/nav-bar.component.html
@@ -1,1 +1,22 @@
-<p>nav-bar works!</p>
+<nav class="navbar navbar-expand-lg bg-light mb-4">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <a class="navbar-brand" href="#"><img class="m-3" src="https://de-park.com/wp-content/uploads/elementor/thumbs/DE-PARK_Logo_V2020_ohne-Slogan-p9zypnce6i29sgqmou2x2lvb77fjk6wpd4pfzzhdz4.png" alt=""></a>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="#" routerLinkActive="active">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/gorras" routerLinkActive="active">Gorras</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="active">Raquetas</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
