--- a/client/padelpark/src/app/app.component.html
+++ b/client/padelpark/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1>Hola</h1>
+<app-nav-bar></app-nav-bar>
+<div class="container">
+    <div class="m-2">
+        <router-outlet></router-outlet>
+    </div>
+</div>
