--- a/client/padelpark/src/app/pages/raquetas/components/raqueta-list/raqueta-list.component.html
+++ b/client/padelpark/src/app/pages/raquetas/components/raqueta-list/raqueta-list.component.html
@@ -1,30 +1,35 @@
-<h1>Gorras</h1>
+<h1>Raquetas</h1>
 <hr>
 <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
         <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button"
-        role="tab" aria-controls="nav-home" aria-selected="true">Añadir gorra</button>
+        role="tab" aria-controls="nav-home" aria-selected="true">Añadir Raqueta</button>
         <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button"
-        role="tab" aria-controls="nav-profile" aria-selected="false">Actualizar gorra</button>
+        role="tab" aria-controls="nav-profile" aria-selected="false">Actualizar Raqueta</button>
         <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button"
-        role="tab" aria-controls="nav-contact" aria-selected="false">Ver gorras</button>
+        role="tab" aria-controls="nav-contact" aria-selected="false">Ver Raquetas</button>
     </div>
 </nav>
 <div class="tab-content" id="nav-tabContent">
     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-        <form (ngSubmit)="createGorra()" class="my-3">
+        <form (ngSubmit)="createRaqueta()" class="my-3">
                 <div class="form-group mb-3">
                     <label>Name</label>
-                    <input type="text" class="form-control" name="title" [(ngModel)]="newGorra.title">
+                    <input type="text" class="form-control" name="title" [(ngModel)]="newRaqueta.title">
                 </div>
                 <div class="form-group mb-3">
                     <label>Price</label>
-                    <input type="number" min="0" class="form-control" name="price" [(ngModel)]="newGorra.price">
+                    <input type="number" min="0" class="form-control" name="price" [(ngModel)]="newRaqueta.price">
                 </div>
                 <div class="form-group mb-3">
                     <label>Category</label>
-                    <select class="form-select" name="category" [(ngModel)]="newGorra.category">
-                        <option value="sports">Sports</option>
+                    <select class="form-select" name="category" [(ngModel)]="newRaqueta.category">
+                        <option value="tennis">Tennis</option>
+                        <option value="squash">Squash</option>
+                        <option value="badminton">Badminton</option>
+                        <option value="padel">Padel</option>
+                        <option value="racquetball">Racquetball</option>
+                        <option value="table-tennis">Table Tennis</option>
                         <option value="fashion">Fashion</option>
                         <option value="casual">Casual</option>
                         <option value="outdoor">Outdoor</option>
@@ -40,32 +45,37 @@
                 </div>
                 <div class="form-group mb-3">
                     <label>Description</label>
-                    <input type="text" class="form-control" name="description" [(ngModel)]="newGorra.description">
+                    <input type="text" class="form-control" name="description" [(ngModel)]="newRaqueta.description">
                 </div>
                 <div class="form-group mb-3">
                     <label>Image (url)</label>
-                    <input type="text" class="form-control" name="image" [(ngModel)]="newGorra.image">
+                    <input type="text" class="form-control" name="image" [(ngModel)]="newRaqueta.image">
                 </div>
                 <button type="submit" class="btn btn-dark">Añadir</button>
         </form>
     </div>
     <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-        <form (ngSubmit)="updateGorra()" class="my-3">
+        <form (ngSubmit)="updateRaqueta()" class="my-3">
             <div class="form-group mb-3">
                 <label>Name</label>
-                <select id="selectDoctor" class="form-select mb-3" name="selectDoctor" [(ngModel)]="selectedGorraId" (change)="getGorra(); clearForm()" required>
-                    <option [ngValue]="null" disabled selected>Selecciona una gorra</option>
-                    <option *ngFor="let gorra of gorras" [value]="gorra._id">{{ gorra.title }}</option>
+                <select id="selectDoctor" class="form-select mb-3" name="selectDoctor" [(ngModel)]="selectedRaquetaId" (change)="getRaqueta(); clearForm()" required>
+                    <option [ngValue]="null" disabled selected>Selecciona una raqueta</option>
+                    <option *ngFor="let raqueta of raquetas" [value]="raqueta._id">{{ raqueta.title }}</option>
                 </select> 
             </div>
             <div class="form-group mb-3">
                 <label>Price</label>
-                <input type="number" min="0" class="form-control" name="price" [(ngModel)]="newUpdateGorra.price">
+                <input type="number" min="0" class="form-control" name="price" [(ngModel)]="newUpdateRaqueta.price">
             </div>
             <div class="form-group mb-3">
                 <label>Category</label>
-                <select class="form-select" name="category" [(ngModel)]="newUpdateGorra.category">
-                    <option value="sports">Sports</option>
+                <select class="form-select" name="category" [(ngModel)]="newUpdateRaqueta.category">
+                    <option value="tennis">Tennis</option>
+                    <option value="squash">Squash</option>
+                    <option value="badminton">Badminton</option>
+                    <option value="padel">Padel</option>
+                    <option value="racquetball">Racquetball</option>
+                    <option value="table-tennis">Table Tennis</option>
                     <option value="fashion">Fashion</option>
                     <option value="casual">Casual</option>
                     <option value="outdoor">Outdoor</option>
@@ -81,20 +91,21 @@
             </div>
             <div class="form-group mb-3">
                 <label>Description</label>
-                <input type="text" class="form-control" name="description" [(ngModel)]="newUpdateGorra.description">
+                <input type="text" class="form-control" name="description" [(ngModel)]="newUpdateRaqueta.description">
             </div>
             <div class="form-group mb-3">
                 <label>Image (url)</label>
-                <input type="text" class="form-control" name="image" [(ngModel)]="newUpdateGorra.image">
+                <input type="text" class="form-control" name="image" [(ngModel)]="newUpdateRaqueta.image">
             </div>
             <button type="submit" class="btn btn-dark">Actualizar</button>
         </form>
     </div>
     <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
         <div class="row my-3">
-            <div class="col-12 col-md-6 col-lg-3 mb-4" *ngFor="let gorra of gorras">
-                <app-gorra [gorra]="gorra"></app-gorra>
+            <div class="col-12 col-md-6 col-lg-3 mb-4" *ngFor="let raqueta of raquetas">
+                <app-raqueta [raqueta]="raqueta"></app-raqueta>
             </div>
         </div>
     </div>
 </div>
+
