--- a/client/padelpark/src/app/components/nav-bar/nav-bar.component.html
+++ b/client/padelpark/src/app/components/nav-bar/nav-bar.component.html
@@ -10,12 +10,21 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" routerLink="/inicio" routerLinkActive="active">Inicio</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" routerLink="/gorras" routerLinkActive="active">Gorras</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" routerLink="/raquetas" routerLinkActive="active">Raquetas</a>
-                </li>
+                <ng-container *ngIf="!authService.loggedIn(); else loggedIn">
+                    <li><a class="nav-link text-white" routerLink="/login" routerLinkActive="active">Iniciar Sesión</a></li>
+                    <li><a class="nav-link text-white" routerLink="/register" routerLinkActive="active">Regístrate</a></li>
+                </ng-container>
+                <ng-template #loggedIn>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" routerLink="/gorras" routerLinkActive="active">Gorras</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" routerLink="/raquetas" routerLinkActive="active">Raquetas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" (click)="authService.logout()">Salir <i class="fa-solid fa-right-from-bracket"></i></a>
+                    </li>
+                </ng-template>
             </ul>
         </div>
     </div>
