Falta el favoritos

--- a/client/padelpark/src/app/pages/inicio/inicio.page.html
+++ b/client/padelpark/src/app/pages/inicio/inicio.page.html
@@ -1,1 +1,10 @@
-<img src="https://the-park.mx/wp-content/themes/the-park/assets/img/masterplan/intro-slide-2.jpg" alt="" style="width: 100%;">
+<img src="assets/lugar.jpg" alt="" style="width: auto; height: auto;">
+<div class="intro">
+    <h1 style="color: black; font-weight: bold; font-family: Arial;">Control de Inventario para canchas de Padel </h1>
+    <p>Ideado para digitalizar el inventario y tener mejor acceso a el.</p>
+  </div>
+  <div class="Creado">
+    <div class="work">
+      <i class="fas fa-atom"></i>
+      <p class="work-heading">Productos actuales Gorras y Raquetas</p>
+    </div>
