YA final hasta donde lo dejamos

--- a/client/padelpark/src/app/pages/gorras/components/gorra/gorra.component.html
+++ b/client/padelpark/src/app/pages/gorras/components/gorra/gorra.component.html
@@ -8,5 +8,7 @@
         <p class="card-text"><b>Description:</b> {{ gorra.description }}</p>
         <hr>
         <button class="btn btn-danger" (click)="onDeleteClick(gorra._id)"><i class="fa-solid fa-trash"></i></button>
+        <br>
+        <button class="btn btn-primary" (click)="onDeleteClick(gorra._id)"> Añadir a favoritos<i class="fa-solid fa"></i></button>
     </div>
 </div>
