--- a/client/padelpark/src/app/pages/raquetas/components/raqueta/raqueta.component.html
+++ b/client/padelpark/src/app/pages/raquetas/components/raqueta/raqueta.component.html
@@ -8,5 +8,7 @@
         <p class="card-text"><b>Description:</b> {{ raqueta.description }}</p>
         <hr>
         <button class="btn btn-danger" (click)="onDeleteClick(raqueta._id)"><i class="fa-solid fa-trash"></i></button>
+        <br>
+        <button class="btn btn-primary" (click)="onDeleteClick(raqueta._id)"> Añadir a favoritos<i class="fa-solid fa"></i></button>
     </div>
 </div>
