--- a/client/padelpark/src/app/pages/gorras/components/gorra/gorra.component.html
+++ b/client/padelpark/src/app/pages/gorras/components/gorra/gorra.component.html
@@ -1,14 +1,15 @@
 <div class="card h-100">
-    <img src="{{ gorra.image }}" class="card-img-top" alt="Gorra Image">
-    <div class="card-body d-flex flex-column">
-        <h5 class="card-title mb-auto"><b>Name:</b> {{ gorra.title }}</h5>
-        <hr>
-        <p class="card-text"><b>Price:</b> {{ gorra.price}}</p>
-        <p class="card-text"><b>Category:</b> {{ gorra.category }}</p>
-        <p class="card-text"><b>Description:</b> {{ gorra.description }}</p>
-        <hr>
-        <button class="btn btn-danger" (click)="onDeleteClick(gorra._id)"><i class="fa-solid fa-trash"></i></button>
-        <br>
-        <button class="btn btn-primary" (click)="onDeleteClick(gorra._id)"> Añadir a favoritos<i class="fa-solid fa"></i></button>
-    </div>
+  <img src="{{ gorra.image }}" class="card-img-top" alt="Gorra Image">
+  <div class="card-body d-flex flex-column">
+    <h5 class="card-title mb-auto"><b>Name:</b> {{ gorra.title }}</h5>
+    <hr>
+    <p class="card-text"><b>Price:</b> {{ gorra.price }}</p>
+    <p class="card-text"><b>Category:</b> {{ gorra.category }}</p>
+    <p class="card-text"><b>Description:</b> {{ gorra.description }}</p>
+    <hr>
+    <button class="btn btn-danger" (click)="onDeleteClick(gorra._id)"><i class="fa-solid fa-trash"></i></button>
+    <br>
+    <button class="btn btn-primary" (click)="addToFav(currentUser, gorra._id, 'gorra')"> Añadir a favoritos<i
+        class="fa-solid fa"></i></button>
+  </div>
 </div>
