--- a/client/padelpark/src/app/pages/gorras/components/gorra/gorra.component.html
+++ b/client/padelpark/src/app/pages/gorras/components/gorra/gorra.component.html
@@ -9,7 +9,9 @@
     <hr>
     <button class="btn btn-danger" (click)="onDeleteClick(gorra._id)"><i class="fa-solid fa-trash"></i></button>
     <br>
-    <button class="btn btn-primary" (click)="addToFav(currentUser, gorra._id, 'gorra')"> Añadir a favoritos<i
-        class="fa-solid fa"></i></button>
+    <button class="btn btn-primary" *ngIf="!isFav(gorra._id)" (click)="addToFav(currentUser, gorra._id, 'gorra')">
+      Añadir a favoritos<i class="fa-solid fa"></i></button>
+    <button class="btn btn-secondary" *ngIf="isFav(gorra._id)" (click)="removeFav(gorra._id)">
+      Eliminar de favoritos<i class="fa-solid fa"></i></button>
   </div>
 </div>
